--- a/app/src/main/res/layout/option_item.xml
+++ b/app/src/main/res/layout/option_item.xml
@@ -24,22 +24,11 @@
         android:layout_marginTop="8dp"
         android:text="允收數: "
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_pn_dmc" />
-
-    <TextView
-        android:id="@+id/t_display"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="16dp"
-        android:text="顯示面:"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_station" />
 
     <TextView
         android:id="@+id/t_user"
@@ -47,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
-        android:text="許証皓 : 013476 "
+        android:layout_marginEnd="2dp"
+        android:text="User"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -62,32 +52,19 @@
         android:layout_marginTop="2dp"
         android:text="料號: \n條碼: "
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_user" />
 
     <Button
-        android:focusable="false"
-
-        android:id="@+id/b_display"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/t_display"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/t_display"
-        app:layout_constraintTop_toTopOf="@+id/t_display" />
-
-    <Button
-        android:focusable="false"
         android:id="@+id/b_station"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="@+id/t_station"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/t_station"
         app:layout_constraintTop_toTopOf="@+id/t_station" />
 
@@ -102,23 +79,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/b_turn_left" />
 
-    <Button
-        android:focusable="false"
-        android:id="@+id/b_upload_state"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:text="上傳\n狀況"
-        app:layout_constraintEnd_toStartOf="@+id/b_blue"
-        app:layout_constraintStart_toEndOf="@+id/b_history"
-        app:layout_constraintTop_toTopOf="@+id/b_history" />
 
     <Button
-        android:focusable="false"
         android:id="@+id/b_blue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:text="藍芽\n配對"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/b_upload_state"
@@ -148,24 +114,24 @@
         app:layout_constraintTop_toTopOf="@+id/b_search_pn" />
 
     <Button
-        android:focusable="false"
         android:id="@+id/b_test_test"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:text="測試\n測試"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/b_mission_check"
         app:layout_constraintTop_toTopOf="@+id/b_mission_check" />
 
     <Button
         android:id="@+id/b_turn_display"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:focusable="false"
         android:text="TOP"
         app:layout_constraintBottom_toBottomOf="@+id/t_tb"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/t_tb"
         app:layout_constraintTop_toTopOf="@+id/t_tb" />
 
@@ -178,28 +144,57 @@
         android:text="T/B:"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_display" />
+        app:layout_constraintTop_toBottomOf="@+id/b_station" />
 
     <Button
-        android:focusable="false"
         android:id="@+id/b_turn_left"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="1dp"
-        android:text="左旋"
+        android:focusable="false"
+        android:text="↶左旋"
         app:layout_constraintEnd_toStartOf="@+id/b_turn_right"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/b_turn_display" />
 
     <Button
-        android:focusable="false"
         android:id="@+id/b_turn_right"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:text="右璇"
+        android:layout_marginEnd="1dp"
+        android:focusable="false"
+        android:text="右璇↷"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/b_turn_left"
         app:layout_constraintTop_toTopOf="@+id/b_turn_left" />
+
+    <TextView
+        android:id="@+id/t_sync_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="-2dp"
+        android:background="@drawable/red_circle"
+        android:elevation="4dp"
+        android:gravity="center"
+        android:padding="2dp"
+        android:text="99"
+        android:textAlignment="center"
+        android:textColor="#FFF"
+        app:layout_constraintEnd_toEndOf="@+id/b_upload_state"
+        app:layout_constraintTop_toTopOf="@+id/b_upload_state" />
+
+    <Button
+        android:id="@+id/b_upload_state"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:focusable="false"
+        android:text="上傳\n狀況"
+        app:layout_constraintEnd_toStartOf="@+id/b_blue"
+        app:layout_constraintStart_toEndOf="@+id/b_history"
+        app:layout_constraintTop_toTopOf="@+id/b_history" />
 </androidx.constraintlayout.widget.ConstraintLayout>
