--- a/app/src/main/res/layout/app_main.xml
+++ b/app/src/main/res/layout/app_main.xml
@@ -7,12 +7,12 @@
     <include
         android:id="@+id/include_option"
         layout="@layout/option"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="0dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/include_panel"
