--- a/app/src/main/res/layout/scrapped_option.xml
+++ b/app/src/main/res/layout/scrapped_option.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionDone|flagNoFullscreen|actionSearch"
         android:queryHint="請輸入關鍵字"
+
+        android:theme="@style/AppTheme.textSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,13 +63,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/t_now_option"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/scrappedReycler"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
