--- a/app/src/main/res/layout/single_report_item.xml
+++ b/app/src/main/res/layout/single_report_item.xml
@@ -14,7 +14,12 @@
         android:layout_marginBottom="2dp"
         android:text="0"
         android:textColor="#FD0000"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:shadowColor="#ff000000"
+        android:shadowRadius="1"
+        android:shadowDx="2"
+        android:shadowDy="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -27,9 +32,14 @@
         android:gravity="center"
         android:lines="1"
         android:text="null"
+        android:shadowColor="#ff000000"
+        android:shadowRadius="1"
+        android:shadowDx="2"
+        android:shadowDy="2"
         android:textAllCaps="false"
         android:textColor="#FF0000"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toTopOf="@+id/t_s_index"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,16 +48,21 @@
 
     <TextView
         android:id="@+id/t_s_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="8dp"
         android:lines="1"
-        android:maxLength="4"
+        android:shadowColor="#ff000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="1"
         android:text="title"
+        android:textAlignment="center"
         android:textColor="#FF0000"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
