--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#0C4767</color>
     <color name="colorPrimaryDark">#1372A4</color>
-    <color name="colorAccent">#093249</color>
+    <color name="colorAccent">#1372A4</color>
 </resources>
