--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,9 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+
+    <style name="AppTheme.textSize" parent="ThemeOverlay.MaterialComponents.Dark">
+        <item name="android:textSize">24sp</item>
+    </style>
+
 </resources>
