--- a/app/src/main/res/layout/dmc_history.xml
+++ b/app/src/main/res/layout/dmc_history.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Refresh👓"
+        android:text="重新載入👓"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
