--- a/app/src/main/res/layout/ln_search.xml
+++ b/app/src/main/res/layout/ln_search.xml
@@ -162,7 +162,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="SCAN"
+        android:text="掃描"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
