--- a/app/src/main/res/layout/sync_state.xml
+++ b/app/src/main/res/layout/sync_state.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="upload"
+        android:text="同步資料"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
